[package]
name = "iso"
description = "implementations of datatypes related to common iso standards"
version = "0.0.0"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/iso"
readme = "https://github.com/superwhiskers/iso/blob/master/readme.md"
keywords = ["iso", "parser"]
categories = ["Encoding", "Parser implementations"]
edition = "2018"
license = "MPL-2.0"

[lib]
test = true

[features]
default = ["std"]
std = []

[dependencies.serde]
default_features = false
features = ["derive"]
optional = true
version = "1"

[dependencies.iso-macro]
path = "../macro"
version = "0"
