[package]
name = "iso-macro"
description = "implementations of procedural macros used in code generation for the iso crate"
version = "0.0.5"
authors = ["superwhiskers <whiskerdev@protonmail.com>"]
repository = "https://github.com/superwhiskers/iso"
readme = "../readme.md"
keywords = ["iso", "macro"]
categories = ["encoding", "parser-implementations", "no-std"]
edition = "2018"
license = "MPL-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1"
quote = "1"
proc-macro2 = "1"
serde_json = "1"

[dependencies.serde]
features = ["derive"]
version = "1"
